<?xml version="1.0"?>
<package format="2">
  <name>hopalyser_msgs</name>
  <version>1.0.0</version>
  <description>The hopalyser_msgs package</description>
  <maintainer email="philipp.rothenhaeusler@gmail.com">Philipp Rothenhäusrel</maintainer>
  <license>MIT</license>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
</package>
